pure css toggle

--- a/colors1.html
+++ b/colors1.html
@@ -4,6 +4,41 @@
 	<title>colors one</title>
 </head>
 <body>
+	<h1>Pure Css Accordion</h1>
+	<div class="tab-group">
+		<div class="tab">
+			<input id=tabone type="radio" name="tabs"></input>
+			<label for="tabone">First tab</label>
+			<div class="tabcontent">
+				<p>Cornhole butcher heirloom ugh lo-fi. Cred neutra roof party, thundercats bitters echo park pabst yr vice iPhone. Butcher blog letterpress schlitz scenester. Forage direct trade 90's wolf, four dollar toast schlitz retro cray meditation everyday carry raw denim mixtape synth keytar hashtag. Offal poutine small batch lomo readymade, meh hashtag health goth swag. Hella microdosing PBR&B mustache, iPhone meh yuccie roof party vice letterpress tumblr sartorial knausgaard. Scenester semiotics offal green juice, sartorial hella organic selvage vegan yr hashtag narwhal.</p>
+			</div>
+		</div>
+		<div class="tab">
+			<input id=tabtwo type="radio" name="tabs"></input>
+			<label for="tabtwo">Second tab</label>
+			<div class="tabcontent">
+				<p>Cornhole butcher heirloom ugh lo-fi. Cred neutra roof party, thundercats bitters echo park pabst yr vice iPhone. Butcher blog letterpress schlitz scenester. Forage direct trade 90's wolf, four dollar toast schlitz retro cray meditation everyday carry raw denim mixtape synth keytar hashtag. Offal poutine small batch lomo readymade, meh hashtag health goth swag. Hella microdosing PBR&B mustache, iPhone meh yuccie roof party vice letterpress tumblr sartorial knausgaard. Scenester semiotics offal green juice, sartorial hella organic selvage vegan yr hashtag narwhal.</p>
+			</div>
+		</div>
+		<div class="tab">
+			<input id=tabthree type="radio" name="tabs"></input>
+			<label for="tabthree">Third tab</label>
+			<div class="tabcontent">
+				<p>Cornhole butcher heirloom ugh lo-fi. Cred neutra roof party, thundercats bitters echo park pabst yr vice iPhone. Butcher blog letterpress schlitz scenester. Forage direct trade 90's wolf, four dollar toast schlitz retro cray meditation everyday carry raw denim mixtape synth keytar hashtag. Offal poutine small batch lomo readymade, meh hashtag health goth swag. Hella microdosing PBR&B mustache, iPhone meh yuccie roof party vice letterpress tumblr sartorial knausgaard. Scenester semiotics offal green juice, sartorial hella organic selvage vegan yr hashtag narwhal.</p>
+			</div>
+		</div>
+		<div class="tab">
+			<input id=tabfour type="radio" name="tabs"></input>
+			<label for="tabfour">Fourth tab</label>
+			<div class="tabcontent">
+				<p>Cornhole butcher heirloom ugh lo-fi. Cred neutra roof party, thundercats bitters echo park pabst yr vice iPhone. Butcher blog letterpress schlitz scenester. Forage direct trade 90's wolf, four dollar toast schlitz retro cray meditation everyday carry raw denim mixtape synth keytar hashtag. Offal poutine small batch lomo readymade, meh hashtag health goth swag. Hella microdosing PBR&B mustache, iPhone meh yuccie roof party vice letterpress tumblr sartorial knausgaard. Scenester semiotics offal green juice, sartorial hella organic selvage vegan yr hashtag narwhal.</p>
+			</div>
+		</div>
+	</div>
+
+	
+	
+
 
 </body>
 </html>
