pure css accordion and modal window

--- a/colors1.html
+++ b/colors1.html
@@ -1,43 +1,59 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 	<title>colors one</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<h1>Pure Css Accordion</h1>
+	<h1>Laura's Demo page</h1>
+	<h3>Pure Css Accordion</h3>
 	<div class="tab-group">
 		<div class="tab">
 			<input id=tabone type="radio" name="tabs"></input>
-			<label for="tabone">First tab</label>
+			<label for="tabone">HEY</label>
 			<div class="tabcontent">
-				<p>Cornhole butcher heirloom ugh lo-fi. Cred neutra roof party, thundercats bitters echo park pabst yr vice iPhone. Butcher blog letterpress schlitz scenester. Forage direct trade 90's wolf, four dollar toast schlitz retro cray meditation everyday carry raw denim mixtape synth keytar hashtag. Offal poutine small batch lomo readymade, meh hashtag health goth swag. Hella microdosing PBR&B mustache, iPhone meh yuccie roof party vice letterpress tumblr sartorial knausgaard. Scenester semiotics offal green juice, sartorial hella organic selvage vegan yr hashtag narwhal.</p>
+				<p>Hi guys! I made this site to experiment with CSS and Jquery... this should be fun!</p>
 			</div>
 		</div>
 		<div class="tab">
 			<input id=tabtwo type="radio" name="tabs"></input>
-			<label for="tabtwo">Second tab</label>
+			<label for="tabtwo">What Up?</label>
 			<div class="tabcontent">
-				<p>Cornhole butcher heirloom ugh lo-fi. Cred neutra roof party, thundercats bitters echo park pabst yr vice iPhone. Butcher blog letterpress schlitz scenester. Forage direct trade 90's wolf, four dollar toast schlitz retro cray meditation everyday carry raw denim mixtape synth keytar hashtag. Offal poutine small batch lomo readymade, meh hashtag health goth swag. Hella microdosing PBR&B mustache, iPhone meh yuccie roof party vice letterpress tumblr sartorial knausgaard. Scenester semiotics offal green juice, sartorial hella organic selvage vegan yr hashtag narwhal.</p>
+				<p>This little accordion menu was made with pure CSS! Isnt that fun?</p>
 			</div>
 		</div>
 		<div class="tab">
 			<input id=tabthree type="radio" name="tabs"></input>
-			<label for="tabthree">Third tab</label>
+			<label for="tabthree">Hello!</label>
 			<div class="tabcontent">
-				<p>Cornhole butcher heirloom ugh lo-fi. Cred neutra roof party, thundercats bitters echo park pabst yr vice iPhone. Butcher blog letterpress schlitz scenester. Forage direct trade 90's wolf, four dollar toast schlitz retro cray meditation everyday carry raw denim mixtape synth keytar hashtag. Offal poutine small batch lomo readymade, meh hashtag health goth swag. Hella microdosing PBR&B mustache, iPhone meh yuccie roof party vice letterpress tumblr sartorial knausgaard. Scenester semiotics offal green juice, sartorial hella organic selvage vegan yr hashtag narwhal.</p>
+				<p>SOOOOOOO much fun guys!</p>
 			</div>
 		</div>
 		<div class="tab">
 			<input id=tabfour type="radio" name="tabs"></input>
-			<label for="tabfour">Fourth tab</label>
+			<label for="tabfour">OK, I get it</label>
 			<div class="tabcontent">
-				<p>Cornhole butcher heirloom ugh lo-fi. Cred neutra roof party, thundercats bitters echo park pabst yr vice iPhone. Butcher blog letterpress schlitz scenester. Forage direct trade 90's wolf, four dollar toast schlitz retro cray meditation everyday carry raw denim mixtape synth keytar hashtag. Offal poutine small batch lomo readymade, meh hashtag health goth swag. Hella microdosing PBR&B mustache, iPhone meh yuccie roof party vice letterpress tumblr sartorial knausgaard. Scenester semiotics offal green juice, sartorial hella organic selvage vegan yr hashtag narwhal.</p>
+				<p>Right, ok you see what I mean...</p>
 			</div>
 		</div>
 	</div>
 
 	
-	
+<h3>Pure CSS Modal window</h3>
+
+	<div class="modal">
+		<input id="modaltrigger" type="checkbox"></input>
+		<label for="modaltrigger">Launch Modal</label>
+		<div class="modaloverlay">
+			<div class="modalwrap">
+				<label for="modaltrigger">&#10006</label>
+				<h2>LOOK A MODAL!</h2>
+				<p>do do do do do do do do do do do
+				na na na na na na na na na na na na na na na na na na na na</p>
+			</div>
+		</div>
+	</div>
+
 
 
 </body>
