renamed html file

--- a/colors1.html
+++ b/colors1.html
@@ -49,7 +49,7 @@
 				<label for="modaltrigger">&#10006</label>
 				<h2>LOOK A MODAL!</h2>
 				<p>do do do do do do do do do do do
-				na na na na na na na na na na na na na na na na na na na na</p>
+				na na na na na na na na na na na na na na na na na na na nas</p>
 			</div>
 		</div>
 	</div>
