--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
 	</div>
 
 
-
+<div class="footer">
+      <div class=" lblink">
+        <a  class="lblink" href="http://laurabuitrago.com/">Laura Buitrago 2016</a> | <a class="lblink" href="https://github.com/laulaucia/colors1">View on Github</a>
+      </div>
+    </div>
 </body>
 </html>
