--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<h1>Laura's pure HTML CSS interaction Demo page</h1>
+	<h1>Laura's pure HTML & CSS interaction Demo page</h1>
 	<h3>Pure Css Accordion</h3>
 	<div class="tab-group">
 		<div class="tab">
