--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<input id=tabone type="radio" name="tabs"></input>
 			<label for="tabone">HEY</label>
 			<div class="tabcontent">
-				<p>Hi guys! I made this site to experiment with CSS and Jquery... this should be fun!</p>
+				<p>Hi guys! I made this site to experiment with CSS only interactions... this should be fun!</p>
 			</div>
 		</div>
 		<div class="tab">
