responsive felexbox and footer

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Laura's pure HTML CSS interaction Demo page</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="animations.css">
 </head>
 <body>
 	<h1>Laura's pure HTML & CSS interaction Demo page</h1>
@@ -53,6 +54,16 @@
 			</div>
 		</div>
 	</div>
+
+<h3>Fun with flexbox / things to live by</h3>
+<div class="container">
+	<div class="item item1">1. Expose yourself to as much world as you can.</div>
+	<div class="item item2">2. Be grateful for the moment you live in and the people around you.</div>
+	<div class="item item3">3. Reach out to others. Everyone has lonely moments.</div>
+	<div class="item item4">4. Bring your life good things and learn to let go of things that are not good or no longer bring you joy.</div>
+	<div class="item item5">5. Respect yourself and others.</div>
+	<div class="item item6">6. Leave things the same or better than you found them.</div>
+</div>	
 
 
 <div class="footer">
